unpackaged/main/default/objects/Opportunity/fields/Back_propagate_adjacent_env2__c.field-meta.xml
<CustomField>
    <fullName>Back_propagate_adjacent_env2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back propagate adjacent env2</label>
    <type>Checkbox</type>
</CustomField>