unpackaged/main/default/objects/Opportunity/fields/DemoConflict__c.field-meta.xml
<CustomField>
    <fullName>DemoConflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoConflict</label>
    <type>Checkbox</type>
</CustomField>