unpackaged/main/default/objects/Opportunity/fields/DemoConflict_rename__c.field-meta.xml
<CustomField>
    <fullName>DemoConflict_rename__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DemoConflict-rename</label>
    <type>Checkbox</type>
</CustomField>