unpackaged/main/default/objects/Opportunity/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practice?</label>
    <type>Checkbox</type>
</CustomField>