unpackaged/main/default/objects/Opportunity/fields/Practice_Field__c.field-meta.xml
<CustomField>
    <fullName>Practice_Field__c</fullName>
    <label>Practice Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>