unpackaged/main/default/objects/Opportunity/fields/Practice_Required__c.field-meta.xml
<CustomField>
    <fullName>Practice_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practice Required?</label>
    <type>Checkbox</type>
</CustomField>